[workspace]
members = ["field", "maybe_rayon", "plonky2", "starky", "util"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.93", default-features = false }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher", "serde"] }
itertools = { version = "0.13.0", default-features = false }
log = { version = "0.4.22", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = { version = "1.1.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }

[profile.release]
opt-level = 3
incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/0xPolygonZero/plonky2"
repository = "https://github.com/0xPolygonZero/plonky2"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography"]

[workspace.lints.clippy]
too_long_first_doc_paragraph = "allow"
