[package]
name = "plonky2_evm"
description = "Implementation of STARKs for the Ethereum Virtual Machine"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { path = "../plonky2", default-features = false, features = ["rand", "timing"] }
plonky2_util = { path = "../util" }
maybe_rayon = { path = "../maybe_rayon" }
anyhow = "1.0.40"
env_logger = "0.9.0"
ethereum-types = "0.13.1"
hex = { version = "0.4.3", optional = true }
hex-literal = "0.3.4"
itertools = "0.10.3"
log = "0.4.14"
once_cell = "1.13.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rlp = "0.5.1"
keccak-hash = "0.9.0"
tiny-keccak = "2.0.2"

[dev-dependencies]
criterion = "0.3.5"
hex = "0.4.3"

[features]
default = ["parallel"]
asmtools = ["hex"]
parallel = ["plonky2/parallel", "maybe_rayon/parallel"]

[[bin]]
name = "assemble"
required-features = ["asmtools"]

[[bench]]
name = "stack_manipulation"
harness = false
