[package]
name = "plonky2_evm"
description = "Implementation of STARKs for the Ethereum Virtual Machine"
version = "0.1.0"
authors = ["Daniel Lubarov <daniel@lubarov.com>", "William Borgeaud <williamborgeaud@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mir-protocol/plonky2"
keywords = ["EVM", "STARK", "Ethereum"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
anyhow = "1.0.40"
blake2 = "0.10.5"
env_logger = "0.10.0"
eth_trie_utils = "0.4.0"
ethereum-types = "0.14.0"
hex = { version = "0.4.3", optional = true }
hex-literal = "0.3.4"
itertools = "0.10.3"
keccak-hash = "0.10.0"
log = "0.4.14"
plonky2_maybe_rayon = "0.1.0"
num = "0.4.0"
num-bigint = "0.4.3"
once_cell = "1.13.0"
pest = "2.1.3"
pest_derive = "2.1.0"
plonky2 = { version = "0.1.1", default-features = false, features = ["timing"] }
plonky2_util = { version = "0.1.0" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rlp = "0.5.1"
rlp-derive = "0.1.0"
serde = { version = "1.0.144", features = ["derive"] }
static_assertions = "1.1.0"
tiny-keccak = "2.0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[dev-dependencies]
criterion = "0.4.0"
hex = "0.4.3"
ripemd = "0.1.3"
sha2 = "0.10.6"

[features]
default = ["parallel"]
asmtools = ["hex"]
parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]

[[bin]]
name = "assemble"
required-features = ["asmtools"]

[[bench]]
name = "stack_manipulation"
harness = false
