[package]
name = "plonky2_insertion"
description = "Circuit implementation of list insertion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
plonky2 = { path = "../plonky2", default-features = false }

[dev-dependencies]
plonky2 = { path = "../plonky2" }

