[package]
name = "plonky2_maybe_rayon"
description = "Feature-gated wrapper around rayon"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

[features]
parallel = ["rayon"]

[dependencies]
rayon = { version = "1.5.3", optional = true }

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
