[package]
name = "plonky2_maybe_rayon"
description = "Feature-gated wrapper around rayon"
version = "0.2.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
parallel = ["rayon"]

[dependencies]
rayon = { version = "1.8.1", optional = true }

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
