[package]
name = "plonky2_u32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
rand = "0.8.4"
num = { version = "0.4", features = [ "rand" ] }
itertools = "0.10.0"
plonky2 = { path = "../plonky2" }
plonky2_util = { path = "../util" }
plonky2_field = { path = "../field" }
