[package]
name = "poseidon2_plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
plonky2 = "0.1.3"
rstest = "0.17.0"
serial_test = "1.0.0"
unroll = "0.1.5"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"
serde_cbor = "0.11.2"

