[package]
name = "system_zero"
description = "A VM whose execution can be verified with STARKs; designed for proving Ethereum transactions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
itertools = "0.10.0"
log = "0.4.14"
plonky2 = { version = "0.1.2" }
plonky2_util = { version = "0.1.0" }
rand = "0.8.4"
rand_chacha = "0.3.1"
starky = { version = "0.1.1" }

[dev-dependencies]
criterion = "0.4.0"
env_logger = "0.10.0"

[[bench]]
name = "lookup_permuted_cols"
harness = false

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = "0.5.0"
