[package]
name = "plonky2_util"
description = "Utilities used by Plonky2"
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
